--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,36 @@
 name: Deploy pages
-on: push
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      # Étape 1 : Cloner le dépôt
       - uses: actions/checkout@v2
+
+      # Étape 2 : Installer Node.js
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: "14"
+
+      # Étape 3 : Installer les dépendances du projet
       - name: Install dependencies
         run: npm install
-      - name: Install slidev
-        run:  npm i -g @slidev/cli
-      - name: Install for PDF
-        run: npm i -D playwright-chromium
-      - name: Build
-        run: slidev build --base /slidev-tutorial/ # Change this line
-      - name: Deploy pages
+
+      # Étape 4 : Installer Slidev CLI globalement
+      - name: Install Slidev
+        run: npm i -g @slidev/cli
+
+      # Étape 5 : Construire les fichiers
+      - name: Build slides
+        run: slidev build --base /slides-adonis/
+
+      # Étape 6 : Déployer les fichiers générés
+      - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2
         with:
           build_dir: dist
