--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,29 @@
 name: Deploy pages
 
-on:
-  push:
-    branches:
-      - main
+on: push
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-    steps:
-      # Étape 1 : Cloner le dépôt
-      - uses: actions/checkout@v2
 
-      # Étape 2 : Installer Node.js
-      - uses: actions/setup-node@v2
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2.1.5
         with:
           node-version: "14"
-
-      # Étape 3 : Installer les dépendances du projet
+      - uses: actions/cache@v2
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
       - name: Install dependencies
-        run: npm install
-
-      # Étape 4 : Installer Slidev CLI globalement
-      - name: Install Slidev
-        run: npm i -g @slidev/cli
-
-      # Étape 5 : Construire les fichiers
-      - name: Build slides
-        run: slidev build --base /slides-adonis/
-
-      # Étape 6 : Déployer les fichiers générés
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2
+        run: |
+          yarn install
+      - name: Build application
+        run: |
+          yarn build --base /${{ github.event.repository.name }}/
+          cp dist/index.html dist/404.html
+      - name: Deploy pages
+        uses: crazy-max/ghaction-github-pages@v2.3.0
         with:
           build_dir: dist
         env:
